--- a/bigmart.csv.ipynb
+++ b/bigmart.csv.ipynb
@@ -3647,7 +3647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# we selected Decision Tree  Classifier as our final model "
+    "# we selected RandomForestRegressor as our final model "
    ]
   },
   {
